# live-handlebars-wasm-yew-rs

./: Cargo.toml  README.md  rustfmt.toml
src/: app.rs  input_data.json  input_template.hbs  json_path.rs  lib.rs  main.rs  prelude.rs  scenario.rs  template_engine.rs
src/agents/: mod.rs  notification_bus.rs
src/components/: mod.rs  navbar.rs  notifications.rs
src/inputs/: boolean.rs  group.rs  list.rs  macros.rs  mod.rs  number.rs  text.rs
src/views/: inputs.rs  mod.rs
static/: index.html
static/css/: base.css
