[package]
name = "wasm-live-handlebars"
version = "0.1.0"
authors = ["Thomas Lacroix <toto.rigolo@free.fr>"]
edition = "2018"

[dependencies]
anyhow = "1"
log = "0.4"
web_logger = "0.2"
yew = { version = "0.13", features = ["std_web"] }
handlebars = "3"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
lazy_static = "1"
